- Added: Thai language support (Prasitichai เรารักในหลวง).
- Added: 74% arabic translation.
- Fixed: terrafirma template and language file (id_ID).
- Fixed: AJAX circuation error on circulation transaction.
- Fixed: birthdate exp on membership.
- Added: update security.
- Added: set item status to missing when finishing stocktake.
- Added: Bengali language support (A. K. M. Nurul Alam).


SENAYAN 3 Stable 14 (Seulanga)
========================================================================
- Fixed : Expiration date checking in membership management & circulation transaction.
- Fixed : Print receipt in circulation transaction.
- Added : Union Catalogue Server (more stable for production use)
- Added : Peer-to-peer cataloging service
- Added : Custom fields for bibliographic data/Bibliography module (experimental)
- Added : Custom fields for membership data/Membership module (experimental)


SENAYAN 3 Stable 13
========================================================================
- Fixed : Loan by classification reporting for non-decimal class
- Fixed : OPAC search error when searching with GMD or Collection type containing more than one word
- Fixed : Non-decimal class total titles and items in Custom Recapitulation reporting
- Fixed : Holiday calculation bugs in Circulation (critical)
- Added : Espanol/Spanish translation (John Urrego Felipe Mejia)
- Added : Arabic translation (Rasyid Ridho)
- Added : SWF Document Viewer
- Added : Circulation transaction receipt when transaction is finished
- Added : Bibliographic item data export and import features
- Added : Union Catalogue Server (experimental)


SENAYAN 3 Stable 12
========================================================================
- Added : Member login in OPAC
- Added : File download limitation based on Member type
- Added : new public template (igos & terrafirma)
- Added : new admin template (igos)


SENAYAN 3 Stable 11
========================================================================